# dronesynthkotlin

./: .project  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xyz/sufystudios/didgsynth/: ExampleInstrumentedTest.java
app/src/androidTest/java/xyz/sufystudios/synthguide/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CombFilter.cpp  CombFilter.h  DCA.cpp  DCA.h  Delay.cpp  Delay.h  DelayAPF.cpp  DelayAPF.h  DelayLine.cpp  DelayLine.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  Filter.cpp  Filter.h  Flanger.h  FrequencyDomain.cpp  LFO.cpp  LFO.h  LPFCombFilter.h  ModulatedDelay.cpp  ModulatedDelay.h  ModulationMatrix.cpp  ModulationMatrix.h  MoogLadderFilter.cpp  MoogLadderFilter.h  MusicSystem.h  OboeAudioRecorder.h  OnePoleLPF.cpp  OnePoleLPF.h  Oscillator.cpp  Oscillator.h  QBLimitedOscillator.cpp  QBLimitedOscillator.h  Reverb.h  StereoDelayFX.cpp  StereoDelayFX.h  Tunin.h  VAOnePoleFilter.cpp  (+7 more)
app/src/main/java/xyz/sufystudios/didgsynth/: MainActivity.java  MainActivity.kt  PlaybackEngine.java  PlaybackEngine.kt
app/src/main/java/xyz/sufystudios/synthguide/: MainActivity.kt  PlaybackEngine.kt
app/src/main/res/drawable/: pattern.xml  volume_seekbar.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_drone_tabbed.xml  menu_main2.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/java/xyz/sufystudios/didgsynth/: ExampleUnitTest.java
app/src/test/java/xyz/sufystudios/synthguide/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
